Bug 401170 - Preview of text files is blurry with fractional display scaling
Summary: Preview of text files is blurry with fractional display scaling
Status: RESOLVED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: Thumbnails and previews (other bugs)
Version First Reported In: 23.04.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-18 16:00 UTC by Patrick Silva
Modified: 2024-02-03 15:21 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (208.64 KB, image/png)
2018-11-18 16:00 UTC, Patrick Silva
Details
screenshot, kio-extras 19.04.2 (70.06 KB, image/png)
2019-06-08 14:37 UTC, Patrick Silva
Details
screenshot, kio-extras 19.04.2 (69.75 KB, image/png)
2019-06-08 14:44 UTC, Patrick Silva
Details
screenshot on X11, scale factor 200% (259.42 KB, image/png)
2020-05-17 13:55 UTC, Patrick Silva
Details
screenshot (32.10 KB, image/png)
2022-02-18 18:16 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-11-18 16:00:19 UTC
Created attachment 116387 [details]
screenshot

STEPS TO REPRODUCE
1. set display scaling factor (I use 1.2) in system settings > display and monitor > scale display. Restart plasma.
2. enable preview for text files in Dolphin settings ("general" section, "previews" tab)
3. enable preview feature in Dolphin
4. open some location containing text files

OBSERVED RESULT
previews of the text files are blurry, see the screenshot please.

EXPECTED RESULT
crisp previews

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.14.3
Qt Version: 5.11.2
KDE Frameworks Version: 5.52.0
Comment 1 Nate Graham 2018-11-19 20:50:58 UTC
Is this true for text files with previews on the desktop and the file open/save dialogs too, or only in Dolphin?
Comment 2 Patrick Silva 2018-11-20 11:41:17 UTC
Same thing in file open/save dialogs.
Preview of text files does not work on the desktop.
Comment 3 Patrick Silva 2019-03-16 18:07:33 UTC
it seems fixed now

Operating System: Arch Linux 
KDE Plasma Version: 5.15.3
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2
Comment 4 Nate Graham 2019-03-16 21:02:28 UTC
Yep, this was probably fixed with https://cgit.kde.org/kiconthemes.git/commit/?id=89344923c00b7bc502f5c24be50027b457d82177
Comment 5 Patrick Silva 2019-06-08 14:37:32 UTC
Created attachment 120695 [details]
screenshot, kio-extras 19.04.2

This bug is back.

Operating System: Arch Linux 
KDE Plasma Version: 5.15.90
KDE Frameworks Version: 5.59.0
Qt Version: 5.13.0 RC
Comment 6 Patrick Silva 2019-06-08 14:44:46 UTC
Created attachment 120698 [details]
screenshot, kio-extras 19.04.2
Comment 7 Christoph Feck 2019-06-25 17:20:11 UTC
Not sure if this is fixable. Thumbnails are just images that are created and cached independed from the display.
Comment 8 Méven Car 2020-05-17 06:35:41 UTC
Have you tried deleting your thumbnail cache ?
rm -r ~/.cache/thumbnails

Perhaps the blurry thumbnails were generated before you got the fix and have been kept since.

I don't reproduce currently with DPR = 2.
Comment 9 Patrick Silva 2020-05-17 13:55:57 UTC
Created attachment 128542 [details]
screenshot on X11, scale factor 200%

Apparently this issue is fixed on X11, see the attached screenshot please.
But it persists on Wayland.

Thank you for your interest on this issue Méven. :)

Operating System: Arch Linux 
KDE Plasma Version: 5.18.90
KDE Frameworks Version: 5.70.0
Qt Version: 5.15.0 rc2
Comment 10 Bug Janitor Service 2020-06-01 04:33:10 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 11 Méven Car 2020-06-01 08:30:56 UTC
Under Wayland, this is a different issue.
I have a patch serie to fix this at 
https://phabricator.kde.org/D29397
Comment 12 Bug Janitor Service 2020-12-19 06:47:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/147
Comment 13 Méven Car 2021-07-16 07:41:20 UTC
Git commit 6f632283d022aaf9d8e2bda81a5409aa36242d4d by Méven Car.
Committed on 16/07/2021 at 06:53.
Pushed by meven into branch 'master'.

Allow to have HiDpi previews

M  +3    -0    src/main.cpp
M  +2    -2    src/panels/information/informationpanelcontent.cpp

https://invent.kde.org/system/dolphin/commit/6f632283d022aaf9d8e2bda81a5409aa36242d4d
Comment 14 Patrick Silva 2022-02-18 18:16:54 UTC
Created attachment 146923 [details]
screenshot

as we can see in the attached screenshot, this bug persists.

Operating System: Arch Linux
KDE Plasma Version: 5.24.1
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2
Graphics Platform: X11
Comment 15 Méven Car 2022-03-09 06:28:49 UTC
For X11 this is fixed

For wayland this does not work but is a consequence/duplicate of https://bugs.kde.org/show_bug.cgi?id=446674
Comment 16 Méven Car 2022-03-09 06:30:58 UTC
(In reply to Méven Car from comment #15)
> For X11 this is fixed
> 

I was wrong apparently, thank you Patrick.
Comment 17 Patrick Silva 2024-02-03 15:21:23 UTC
Cannot reproduce on Plasma 6 RC2.

Operating System: Arch Linux 
KDE Plasma Version: 5.93.0
KDE Frameworks Version: 5.249.0
Qt Version: 6.7.0
Graphics Platform: X11