Allow to have HiDpi previews

BUG: 401170